--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-mocha": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
     "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "gulp-sourcemaps-support": "0.0.1"
   }
 }
